# PixelBridge

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  PixelBridge.desktop  README.md  resources.qrc
.github/workflows/: appimage.yml  build.yml  linux.yml  macos.yml  release.yml  windows.yml
include/core/: Bridge.h  DataPacket.h  Filter.h  Logger.h  Version.h.in
include/filters/: Demuxer.h  Muxer.h  QmlVideoSinkFilter.h  RtspServerFilter.h  ScreenCapture.h  VideoDecoder.h  VideoEncoder.h  VideoSink.h
qml/: DisplayPage.qml  LogPage.qml  PlaybackPage.qml  ServePage.qml  SettingsPage.qml  main.qml
scripts/: package_appimage.sh
src/: main.cpp
src/core/: Bridge.cpp  Logger.cpp
src/filters/: Demuxer.cpp  Muxer.cpp  QmlVideoSinkFilter.cpp  RtspServerFilter.cpp  ScreenCapture.cpp  VideoDecoder.cpp  VideoEncoder.cpp
tests/: bench_qt_capture.cpp
